[package]
name = "noircast"
version = "0.1.0"
edition = "2021"
authors = ["NoirCast Contributors"]
description = "A powerful TUI-based packet crafting and sending tool with vim-like navigation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/0x00nier/NoirCast"
keywords = ["networking", "packet", "tui", "tcp", "security"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "noircast"
path = "src/main.rs"

[lib]
name = "noircast"
path = "src/lib.rs"

[dependencies]
# TUI Framework
ratatui = { version = "0.28", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async Runtime & Networking
tokio = { version = "1.41", features = ["full", "rt-multi-thread", "sync", "time", "net", "io-util", "macros"] }
futures = "0.3"

# Packet Crafting
pnet = "0.35"
pnet_packet = "0.35"
pnet_transport = "0.35"
pnet_datalink = "0.35"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# CLI Arguments
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
rand = "0.8"
hex = "0.4"
byteorder = "1.5"
socket2 = { version = "0.5", features = ["all"] }

# HTTP Parsing
httparse = "1.9"
http = "1.1"

# DNS
trust-dns-resolver = "0.23"

# Color support
unicode-width = "0.1"

# Synchronization
parking_lot = "0.12"

# Unix capabilities (for raw socket detection on Linux)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "net"] }
libc = "0.2"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
tempfile = "3.13"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "packet_benchmark"
harness = false

[features]
default = []
debug-logs = []
